# Note-SQLAlchemy

./: README.md  index.html  main.py  pyproject.toml
src/: schemas.py  settings.py
src/db/: __init__.py  base.py  engine.py
src/db/models/: __init__.py  declarative.py  imperative.py
src/queries/: __init__.py
src/queries/core/: async_core.py  sync_core.py
src/queries/orm/: async_orm.py  sync_orm.py
